src/test/deca/etapeB/invalid/mult_float_string.deca
// Description : test de mult sur un float et un string 
// 	 
//Resultat:
//      Erreur Contextuelle : multiplication d'un float et un string 
//      Ligne 8 : ./src/test/deca/etapeB/invalid/mult_float_string.deca:2:8: type not expected
{
   3.3*"hello";
}